--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -69,6 +69,8 @@ items:
         href: operator-best-practices-advanced-scheduler.md
       - name: Autentisering och auktorisering
         href: operator-best-practices-identity.md
+      - name: Affärskontinuitet och haveriberedskap
+        href: operator-best-practices-multi-region.md
     - name: För programutvecklare
       items:
       - name: Resurshantering
@@ -97,6 +99,12 @@ items:
       maintainContext: true
     - name: Azure AD-aktiverad AKS
       href: aad-integration.md
+    - name: Skapa virtuella noder (förhandsversion)
+      items:
+      - name: Azure CLI
+        href: virtual-nodes-cli.md
+      - name: Azure Portal
+        href: virtual-nodes-portal.md
     - name: Använda Virtual Kubelet
       href: virtual-kubelet.md
     - name: Använda klusterautoskalning
@@ -260,14 +268,14 @@ items:
   - name: Ge produktfeedback
     href: https://feedback.azure.com/forums/914020-azure-kubernetes-service-aks
   - name: Stack Overflow
-    href: http://stackoverflow.com/questions/tagged/azure-container-service
+    href: https://stackoverflow.com/questions/tagged/azure-container-service
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=container-service&sort=newest
   - name: VANLIGA FRÅGOR OCH SVAR
     href: faq.md
-ms.openlocfilehash: fc7f58330bf5ca0819cf0da494e521324fd2a6ea
-ms.sourcegitcommit: 5aed7f6c948abcce87884d62f3ba098245245196
+ms.openlocfilehash: 4bc03d2a50f384527bdfd3612d684cff6a6310e2
+ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/28/2018
-ms.locfileid: "52441680"
+ms.lasthandoff: 12/04/2018
+ms.locfileid: "52847345"
