--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -11,16 +11,18 @@ items:
     href: functions-compare-logic-apps-ms-flow-webjobs.md
 - name: Snabbstarter
   items:
-  - name: 'Skapa funktion: portal'
-    href: functions-create-first-azure-function.md
   - name: Skapa funktion – Visual Studio
     href: functions-create-your-first-function-visual-studio.md
   - name: Skapa funktion – Visual Studio-kod
     href: functions-create-first-function-vs-code.md
   - name: Skapa funktion – Java/Maven
     href: functions-create-first-java-maven.md
+  - name: Skapa funktion – Python
+    href: functions-create-first-function-python.md
   - name: 'Skapa funktion: Azure CLI'
     href: functions-create-first-azure-function-azure-cli.md
+  - name: 'Skapa funktion: portal'
+    href: functions-create-first-azure-function.md
   - name: Skapa funktion – Linux
     href: functions-create-first-azure-function-azure-cli-linux.md
   - name: Utlösare
@@ -86,6 +88,8 @@ items:
       href: functions-reference-node.md
     - name: Java
       href: functions-reference-java.md
+    - name: Python
+      href: functions-reference-python.md
   - name: Diagnostik
     href: ../app-service/app-service-diagnostics.md
   - name: Saker att tänka på gällande prestanda
@@ -114,6 +118,8 @@ items:
       href: functions-create-maven-intellij.md
     - name: Eclipse-utveckling
       href: functions-create-maven-eclipse.md
+    - name: Skapa en Linux-funktionsapp
+      href: create-function-app-linux-app-service-plan.md
     - name: Hantera anslutningar
       href: manage-connections.md
     - name: Felhantering
@@ -188,6 +194,14 @@ items:
       href: functions-recover-storage-account.md
 - name: Referens
   items:
+  - name: API-referenser
+    items:
+    - name: Java
+      href: https://docs.microsoft.com/java/api/overview/azure/functions/runtime?view=azure-java-stable
+    - name: Python
+      href: https://docs.microsoft.com/python/api/azure-functions/azure.functions?view=azure-python
+  - name: Referens för appinställningar
+    href: functions-app-settings.md
   - name: Bindningar
     items:
     - name: Blob Storage
@@ -229,13 +243,12 @@ items:
     - name: Twilio
       href: functions-bindings-twilio.md
   - name: Referens för host.json
+    href: functions-host-json.md
     items:
     - name: Functions 2.x
       href: functions-host-json.md
     - name: Functions 1.x
       href: functions-host-json-v1.md
-  - name: Referens för appinställningar
-    href: functions-app-settings.md
   - name: Referens för OpenAPI
     href: functions-api-definition.md
 - name: Resurser
@@ -264,9 +277,9 @@ items:
     href: https://github.com/Azure/Azure-Functions/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=functions&updatetype=&platform=
-ms.openlocfilehash: facc469c576bf1de905441bb5b56a00bd745e924
-ms.sourcegitcommit: c8088371d1786d016f785c437a7b4f9c64e57af0
+ms.openlocfilehash: bd85d1f3afa9e6ebc580f252782756bff278b9d8
+ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/30/2018
-ms.locfileid: "52632304"
+ms.lasthandoff: 12/04/2018
+ms.locfileid: "52850665"
