--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -25,6 +25,8 @@ items:
   items:
   - name: Zoomningsnivåer och rutnät
     href: zoom-levels-and-tile-grid.md
+  - name: Välja rätt prisnivå
+    href: choose-pricing-tier.md
   - name: Täckning
     items:
     - name: Täckning för geokodning
@@ -45,6 +47,8 @@ items:
     items:
     - name: Hantera konton och nycklar
       href: how-to-manage-account-keys.md
+    - name: Hantera prisnivå
+      href: how-to-manage-pricing-tier.md
     - name: Visa användningsstatistik
       href: how-to-view-api-usage.md
   - name: Hämta mappningsdata från REST API:er
@@ -163,9 +167,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://iotschool.microsoft.com/learning-paths/4ZktHn3KEUIiUw64C0Aieo
-ms.openlocfilehash: e69f28012fcceb7aa741c1ba29c9f21537450089
-ms.sourcegitcommit: 275eb46107b16bfb9cf34c36cd1cfb000331fbff
+ms.openlocfilehash: d59d9b758ce7748dc20a48682d3e5f75ea87c037
+ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/15/2018
-ms.locfileid: "51706253"
+ms.lasthandoff: 12/04/2018
+ms.locfileid: "52845747"
