--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -98,6 +98,8 @@ items:
       href: how-to-customize-language-model.md
     - name: Anpassa uttal
       href: how-to-customize-pronunciation.md
+    - name: Skapa en slutpunkt för anpassad taligenkänning
+      href: how-to-create-custom-endpoint.md
     - name: Anpassa rösttyper (bot brand voice)
       href: how-to-customize-voice-font.md
     - name: Anpassa väckningsord för enhet (Devices SDK)
@@ -203,9 +205,9 @@ items:
     href: https://azure.microsoft.com/roadmap/?category=ai-machine-learning
   - name: Sekretess och cookies
     href: https://privacy.microsoft.com/privacystatement
-ms.openlocfilehash: d8bd694a976bb233ee25bca050505042759417ac
-ms.sourcegitcommit: c8088371d1786d016f785c437a7b4f9c64e57af0
+ms.openlocfilehash: d7a8f5e5dac7778a1e92b4254ec6e32997ba5e28
+ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/30/2018
-ms.locfileid: "52635568"
+ms.lasthandoff: 12/04/2018
+ms.locfileid: "52837264"
