--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -46,6 +46,8 @@ items:
       href: container-instances-multi-container-group.md
     - name: Distribution av virtuellt nätverk (förhandsversion)
       href: container-instances-vnet.md
+    - name: Distribuera med GPU-resurser (förhandsgranskning)
+      href: container-instances-gpu.md
     - name: Distribuera från Azure Container Registry
       href: container-instances-using-azure-container-registry.md
     - name: Ange miljövariabler (env)
@@ -120,9 +122,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-container-instances
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=container-instances&sort=newest
-ms.openlocfilehash: 3512afb8c716e16b55a5115a91e4f7011ad865bb
-ms.sourcegitcommit: ccdea744097d1ad196b605ffae2d09141d9c0bd9
+ms.openlocfilehash: 06c3fcccbc447945be6385303cdb4311125bf8e3
+ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/23/2018
-ms.locfileid: "49650204"
+ms.lasthandoff: 12/04/2018
+ms.locfileid: "52835785"
