--- a/articles/data-explorer/index.yml
+++ b/articles/data-explorer/index.yml
@@ -1,23 +1,20 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 8985bfa71532cc73dbfeef8d63109476d6893c7f
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: e4bd3de3dee3219619c0146eb0e455cd9b25c59e
+ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46975980"
+ms.lasthandoff: 12/04/2018
+ms.locfileid: "52840978"
 documentType: LandingData
 title: Dokumentation om Azure Data Explorer
 metadata:
-  title: Dokumentation om Azure Data Explorer – snabbstarter, självstudier, och språk- och API-referenser | Microsoft Docs
+  title: Dokumentation om Azure Data Explorer – Snabbstarter, självstudier, samt språk- och API-referenser
   description: Azure Data Explorer är en molnplattform för logganalys som är optimerad för ad hoc-stordatafrågor.
   author: mgblythe
-  manager: kfile
+  ms.author: mblythe
   ms.service: data-explorer
-  ms.tgt_pltfrm: na
-  ms.devlang: na
   ms.topic: landing-page
   ms.date: 09/24/2018
-  ms.author: mblythe
 abstract:
   description: <p>Azure Data Explorer är en snabb och mycket skalbar datautforskningstjänst för logg- och telemetridata. Den hjälper dig att hantera de många dataströmmar som modern programvara skapar, så att du kan samla in, lagra och analysera data. Azure Data Explorer är perfekt för att analysera stora volymer av olikartade data från olika datakällor, till exempel webbplatser, program, IoT-enheter med mera.</p><p>Lär dig hur du använder Azure Data Explorer med våra snabbstarter, självstudier och referensinnehåll.</p>
 sections:
