--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -12,6 +12,9 @@ items:
   - name: Vad händer med Workbench?
     displayName: desktop
     href: overview-what-happened-to-workbench.md
+  - name: Viktig information
+    displayName: what's new
+    href: azure-machine-learning-release-notes.md
   expanded: true
 - name: Snabbstarter
   items:
@@ -126,7 +129,7 @@ items:
       href: how-to-consume-web-service.md
   - name: Övervaka webbtjänster
     items:
-    - name: Samla in och utvärdera data
+    - name: Samla in och utvärdera modelldata
       href: how-to-enable-data-collection.md
     - name: Övervaka med Application Insights
       href: how-to-enable-app-insights.md
@@ -155,9 +158,6 @@ items:
     href: https://azure.microsoft.com/pricing/details/machine-learning-services/
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-  - name: Viktig information
-    displayName: what's new
-    href: azure-machine-learning-release-notes.md
   - name: Kända problem
     href: resource-known-issues.md
   - name: Få support
@@ -368,9 +368,9 @@ items:
       href: ../desktop-workbench/frequently-asked-questions.md
     - name: Äldre problem
       href: ../desktop-workbench/known-issues-and-troubleshooting-guide.md
-ms.openlocfilehash: 14ba5fa2b31c6695737b3250521d0904c950cf30
-ms.sourcegitcommit: fa758779501c8a11d98f8cacb15a3cc76e9d38ae
+ms.openlocfilehash: 308c767eb4a4bd332037093e23a1cb53a9fd1dc7
+ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/20/2018
-ms.locfileid: "52264904"
+ms.lasthandoff: 12/04/2018
+ms.locfileid: "52845067"
