--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -56,6 +56,8 @@ items:
       href: migrate-tutorial-windows-server-2008.md
     - name: Migrera AWS-instanser till Azure
       href: migrate-tutorial-aws-azure.md
+  - name: Migrera virtuella Azure-datorer
+    items:
     - name: Migrera virtuella Azure-datorer till en annan region
       href: azure-to-azure-tutorial-migrate.md
 - name: Begrepp
@@ -436,9 +438,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=site-recovery
-ms.openlocfilehash: 25534dfc7986b8dee0dd723532a52f5d445fa7f6
-ms.sourcegitcommit: ebf2f2fab4441c3065559201faf8b0a81d575743
+ms.openlocfilehash: a7e4cb642874522c8f5a2615ebeed6175d384fd8
+ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/20/2018
-ms.locfileid: "52161913"
+ms.lasthandoff: 12/04/2018
+ms.locfileid: "52834476"
