--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -1,55 +1,86 @@
+items:
 - name: Grunderna i Azure IoT
   href: ../iot-fundamentals/index.yml
 - name: Dokumentation om Azure Time Series Insights
   href: index.yml
 - name: Översikt
   items:
-    - name: Om Time Series Insights
-      href: time-series-insights-overview.md
+  - name: Om Time Series Insights (förhandsversion)
+    href: time-series-insights-update-overview.md
 - name: Snabbstarter
   items:
+  - name: Azure Time Series Insights (Allmänt tillgänglig)
+    items:
     - name: Utforska Time Series Insights
       href: time-series-quickstart.md
+  - name: Azure Time Series Insights (förhandsversion)
+    items:
+    - name: Utforska Time Series Insights (förhandsversion)
+      href: time-series-insights-update-quickstart.md
 - name: Självstudier
   items:
-    - name: Utforska TSI JavaScript-klientbibliotek
-      href: tutorial-explore-js-client-lib.md
+  - name: Utforska TSI JavaScript-klientbibliotek
+    href: tutorial-explore-js-client-lib.md
+  - name: Skapa en TSI-webbapp med en sida
+    href: tutorial-create-tsi-sample-spa.md
+  - name: Azure Time Series Insights (Allmänt tillgänglig)
+    items:
     - name: Skapa en TSI-miljö
       href: tutorial-create-populate-tsi-environment.md
-    - name: Skapa en TSI-webbapp med en sida
-      href: tutorial-create-tsi-sample-spa.md
+  - name: Azure Time Series Insights (förhandsversion)
+    items:
+    - name: Skapa en TSI-miljö
+      href: time-series-insights-update-create-environment.md
 - name: Begrepp
   items:
+  - name: Azure Time Series Insights (Allmänt tillgänglig)
+    items:
+    - name: Om Time Series Insights
+      href: time-series-insights-overview.md
     - name: Planera din miljö
       href: time-series-insights-environment-planning.md
     - name: Visualisera data i Utforskaren
       href: time-series-insights-explorer.md
-    - name: Minimera begränsningar
-      href: time-series-insights-environment-mitigate-latency.md
     - name: Förstå datakvarhållning
       href: time-series-insights-concepts-retention.md
-    - name: Diagnostisera och felsöka
-      href: time-series-insights-diagnose-and-solve-problems.md
-    - name: Utveckla
-      items:
-        - name: Autentisera och auktorisera
-          href: time-series-insights-authentication-and-authorization.md
-        - name: 'Fråga data med C#'
-          href: time-series-insights-query-data-csharp.md
-        - name: 'Hantera referensdata med C#'
-          href: time-series-insights-manage-reference-data-csharp.md
-        - name: Dela en anpassad vy
-          href: time-series-insights-parameterized-urls.md
+  - name: Azure Time Series Insights (förhandsversion)
+    items:
+    - name: Planera din miljö
+      href: time-series-insights-update-plan.md
+    - name: Datalagring och ingångshändelser
+      href: time-series-insights-update-storage-ingress.md
+    - name: Användningsfall
+      href: time-series-insights-update-use-cases.md
+    - name: Time Series-modell
+      href: time-series-insights-update-tsm.md
+    - name: Time Series-fråga
+      href: time-series-insights-update-tsq.md
+    - name: Visualisera data i uppdateringen för Explorer
+      href: time-series-insights-update-explorer.md
+  - name: Utveckla
+    items:
+    - name: Autentisera och auktorisera
+      href: time-series-insights-authentication-and-authorization.md
+    - name: Fråga data med C#
+      href: time-series-insights-query-data-csharp.md
+    - name: Hantera referensdata med C#
+      href: time-series-insights-manage-reference-data-csharp.md
+    - name: Dela en anpassad vy
+      href: time-series-insights-parameterized-urls.md
 - name: Instruktionsguider
   items:
+  - name: Bevilja åtkomst till data
+    href: time-series-insights-data-access.md
+  - name: Ansluta till Event Hub
+    href: time-series-insights-how-to-add-an-event-source-eventhub.md
+  - name: Ansluta till IoT Hub
+    href: time-series-insights-how-to-add-an-event-source-iothub.md
+  - name: Hantera resurser med hjälp av mallar
+    href: time-series-insights-manage-resources-using-azure-resource-manager-template.md
+  - name: Azure Time Series Insights (Allmänt tillgänglig)
+    items:
     - name: Skapa en miljö
       href: time-series-insights-get-started.md
-    - name: Bevilja åtkomst till data
-      href: time-series-insights-data-access.md
-    - name: Ansluta till Event Hub
-      href: time-series-insights-how-to-add-an-event-source-eventhub.md
-    - name: Ansluta till IoT Hub
-      href: time-series-insights-how-to-add-an-event-source-iothub.md
     - name: Konfigurera datakvarhållning
       href: time-series-insights-how-to-configure-retention.md
     - name: Skapa en referensdatauppsättning
@@ -58,61 +89,96 @@
       href: time-series-insights-send-events.md
     - name: Skala din miljö
       href: time-series-insights-how-to-scale-your-environment.md
-    - name: Hantera resurser med hjälp av mallar
-      href: time-series-insights-manage-resources-using-azure-resource-manager-template.md
     - name: Forma JSON för frågor
       href: how-to-shape-query-json.md
+    - name: Minimera begränsningar
+      href: time-series-insights-environment-mitigate-latency.md
+    - name: Diagnostisera och felsöka
+      href: time-series-insights-diagnose-and-solve-problems.md
+  - name: Azure Time Series Insights (förhandsversion)
+    items:
+    - name: Välj ett Time Series-ID
+      href: time-series-insights-update-how-to-id.md
+    - name: Diagnostisera och felsöka
+      href: time-series-insights-update-how-to-troubleshoot.md
+    - name: Datamodellering
+      href: time-series-insights-update-how-to-tsm.md
+    - name: Forma JSON för frågor
+      href: time-series-insights-update-how-to-shape-events.md
 - name: Referens
   items:
-    - name: Fråge-API
-      href: /rest/api/time-series-insights/time-series-insights-reference-queryapi
-    - name: Frågesyntax
-      href: /rest/api/time-series-insights/time-series-insights-reference-query-syntax
+  - name: Time Series Insights
+    items:
+    - name: Time Series Insights (Allmänt tillgängligt)
+      items:
+      - name: Söka i data
+        items:
+        - name: API
+          href: /rest/api/time-series-insights/time-series-insights-reference-queryapi
+        - name: Syntax
+          href: /rest/api/time-series-insights/time-series-insights-reference-query-syntax
+      - name: API för referensdata
+    - name: Azure Time Series Insights (förhandsversion)
+      items:
+      - name: Time Series-fråga
+        href: /rest/api/time-series-insights/time-series-insights-reference-update-tsq
+      - name: Time Series-modell
+        href: /rest/api/time-series-insights/time-series-insights-reference-update-tsm
+      - name: API för Time Series-miljö
+        href: /rest/api/time-series-insights/time-series-insights-reference-update-env
+      - name: Time Series-uttryck och -syntax
+        href: /rest/api/time-series-insights/time-series-insights-reference-update-tsx
 - name: Relaterat
   items:
-    - name: Lösningar
-      items:
-        - name: Förinställda lösningar för IoT Suite
-          href: /azure/iot-suite
-        - name: IoT Central
-          href: 'https://docs.microsoft.com/microsoft-iot-central/'
-    - name: Plattformstjänster
-      items:
-        - name: IoT Hub
-          href: /azure/iot-hub
-        - name: IoT Hub Device Provisioning Service
-          href: /azure/iot-dps
-        - name: Kartor
-          href: /azure/azure-maps
-        - name: 'Tjänst-SDK:er'
-          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks'
-        - name: Time Series Insights
-          href: /azure/time-series-insights
-    - name: Edge
-      items:
-        - name: IoT Edge
-          href: /azure/iot-edge
-        - name: 'SDK:er för IoT-enheter'
-          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
-    - name: Azure Stream Analytics
-      href: /azure/stream-analytics/
+  - name: Lösningar
+    items:
+    - name: Förinställda lösningar för IoT Suite
+      href: /azure/iot-suite
+    - name: IoT Central
+      href: https://docs.microsoft.com/microsoft-iot-central/
+  - name: Plattformstjänster
+    items:
+    - name: IoT Hub
+      href: /azure/iot-hub
+    - name: IoT Hub Device Provisioning Service
+      href: /azure/iot-dps
+    - name: Kartor
+      href: /azure/azure-maps
+    - name: Tjänst-SDK:er
+      href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
+    - name: Time Series Insights
+      href: /azure/time-series-insights
+  - name: Edge
+    items:
+    - name: IoT Edge
+      href: /azure/iot-edge
+    - name: SDK:er för IoT-enheter
+      href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
+  - name: Azure Stream Analytics
+    href: /azure/stream-analytics/
 - name: Resurser
   items:
-    - name: Kunddataförfrågningar
-      href: time-series-insights-customer-data-requests.md
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=iot'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/time-series-insights/'
-    - name: Priskalkylator
-      href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/regions/services/'
-    - name: MSDN-forum
-      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureTimeSeriesInsights'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/azure-timeseries-insights'
-    - name: Supportalternativ
-      href: 'https://azure.microsoft.com/support/options/'
-    - name: Videoklipp
-      href: 'https://azure.microsoft.com/resources/videos/index/?services=time-series-insights'
+  - name: Kunddataförfrågningar
+    href: time-series-insights-customer-data-requests.md
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/?category=iot
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/time-series-insights/
+  - name: Priskalkylator
+    href: https://azure.microsoft.com/pricing/calculator/
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/regions/services/
+  - name: MSDN-forum
+    href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureTimeSeriesInsights
+  - name: Stack Overflow
+    href: https://stackoverflow.com/questions/tagged/azure-timeseries-insights
+  - name: Supportalternativ
+    href: https://azure.microsoft.com/support/options/
+  - name: Videoklipp
+    href: https://azure.microsoft.com/resources/videos/index/?services=time-series-insights
+ms.openlocfilehash: d30b4b2b19a4f055647b4723c91a15a1a977de6d
+ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 12/04/2018
+ms.locfileid: "52849521"
