--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -65,13 +65,21 @@ items:
       href: choose-map-style.md
     - name: Lägg till kartkontroller
       href: map-add-controls.md
-    - name: Lägga till symboler och markörer
+    - name: Lägga till ett symbolskikt
       href: map-add-pin.md
     - name: Lägg till ett popup-fönster
       href: map-add-popup.md
+    - name: Lägga till ett bubbelskikt
+      href: map-add-bubble-layer.md
     - name: Lägg till en form
       href: map-add-shape.md
-    - name: Lägg till anpassat HTML
+    - name: Lägga till ett heatmapskikt
+      href: map-add-heat-map-layer.md
+    - name: Lägga till ett avbildningsskikt
+      href: map-add-image-layer.md
+    - name: Lägga till ett panelskikt
+      href: map-add-tile-layer.md
+    - name: Lägga till HTML-markeringar
       href: map-add-custom-html.md
     - name: Tjänster
       items:
@@ -167,9 +175,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://iotschool.microsoft.com/learning-paths/4ZktHn3KEUIiUw64C0Aieo
-ms.openlocfilehash: d59d9b758ce7748dc20a48682d3e5f75ea87c037
-ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
+ms.openlocfilehash: 5653e8567637877426af54e50436211637478ca5
+ms.sourcegitcommit: 2bb46e5b3bcadc0a21f39072b981a3d357559191
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/04/2018
-ms.locfileid: "52845747"
+ms.lasthandoff: 12/05/2018
+ms.locfileid: "52888604"
