--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -62,6 +62,8 @@ items:
   items:
   - name: Azure-hantering
     href: azure-management.md?toc=/azure/azure-monitor/toc.json
+  - name: Kontinuerlig övervakning
+    href: continuous-monitoring.md
   - name: Övervaka data
     items:
     - name: Mått och loggar
@@ -75,13 +77,13 @@ items:
     - name: Diagnostikloggar
       href: ../monitoring-and-diagnostics/monitoring-overview-of-diagnostic-logs.md?toc=/azure/azure-monitor/toc.json
     - name: Inmatningstid för loggdata
-      href: ../log-analytics/log-analytics-data-ingestion-time.md?toc=/azure/azure-monitor/toc.json
+      href: platform/data-ingestion-time.md
     - name: Anpassade mått till måttlager
       href: ../monitoring-and-diagnostics/metrics-custom-overview.md?toc=/azure/azure-monitor/toc.json
     - name: Datasäkerhet
       items:
       - name: Loggdata
-        href: ../log-analytics/log-analytics-data-security.md?toc=/azure/azure-monitor/toc.json
+        href: platform/data-security.md
       - name: Hantering av personliga loggdata
         href: ../log-analytics/log-analytics-personal-data-mgmt.md?toc=/azure/azure-monitor/toc.json
       - name: Insamling, kvarhållning och lagring av programdata
@@ -109,7 +111,7 @@ items:
     - name: Log Analytics
       href: log-query/log-query-overview.md
     - name: Loggfrågeportaler
-      href: ../log-analytics/log-analytics-log-search-portals.md?toc=/azure/azure-monitor/toc.json
+      href: log-query/portals.md
     - name: Övergång till OMS-portalen
       items:
       - name: Översikt
@@ -139,7 +141,7 @@ items:
   - name: VANLIGA FRÅGOR OCH SVAR
     items:
     - name: Log Analytics
-      href: ../log-analytics/log-analytics-faq.md?toc=/azure/azure-monitor/toc.json
+      href: platform/log-faq.md
     - name: Application Insights
       href: ../application-insights/app-insights-troubleshoot-faq.md?toc=/azure/azure-monitor/toc.json
 - name: Instruktionsguider
@@ -199,7 +201,7 @@ items:
         - name: VM-tillägg för Linux
           href: ../virtual-machines/linux/extensions-oms.md?toc=/azure/azure-monitor/toc.json
         - name: Operations Manager
-          href: ../log-analytics/log-analytics-om-agents.md?toc=/azure/azure-monitor/toc.json
+          href: platform/om-agents.md
         - name: OMS-gateway
           href: platform/gateway.md
         - name: Agenthantering
@@ -257,7 +259,7 @@ items:
       - name: Anpassade loggar
         href: platform/data-sources-custom-logs.md
       - name: Anpassade fält
-        href: ../log-analytics/log-analytics-custom-fields.md?toc=/azure/azure-monitor/toc.json
+        href: platform/custom-fields.md
     - name: Konfigurera program
       items:
       - name: Azure-appar
@@ -423,7 +425,7 @@ items:
     - name: Samla anpassade data
       items:
       - name: API för Log Analytics-datainsamlare
-        href: ../log-analytics/log-analytics-data-collector-api.md?toc=/azure/azure-monitor/toc.json
+        href: platform/data-collector-api.md
       - name: Pipelineexempel för API för Log Analytics-datainsamlare
         href: platform/create-pipeline-datacollector-api.md
       - name: Programdata
@@ -514,7 +516,7 @@ items:
         - name: Arbetsböcker
           href: ../application-insights/app-insights-usage-workbooks.md?toc=/azure/azure-monitor/toc.json
       - name: Lösning för webbappsanalys
-        href: ../log-analytics/log-analytics-azure-web-apps-analytics.md?toc=/azure/azure-monitor/toc.json
+        href: insights/azure-web-apps-analytics.md
     - name: Övervaka containrar
       items:
       - name: Azure Monitor för containrar
@@ -532,7 +534,7 @@ items:
         - name: Felsökning
           href: insights/container-insights-troubleshoot.md
       - name: Övervakning av Docker- och Windows-containrar
-        href: ../log-analytics/log-analytics-containers.md?toc=/azure/azure-monitor/toc.json
+        href: insights/containers.md
       - name: Övervaka Docker-program
         href: ../application-insights/app-insights-docker.md?toc=/azure/azure-monitor/toc.json
     - name: Övervaka resursgrupper
@@ -540,7 +542,7 @@ items:
     - name: Övervaka databaser
       items:
       - name: Azure SQL
-        href: ../log-analytics/log-analytics-azure-sql.md?toc=/azure/azure-monitor/toc.json
+        href: insights/azure-sql.md
       - name: SQL Server
         href: insights/sql-assessment.md
     - name: Övervaka nätverk
@@ -661,55 +663,55 @@ items:
     - name: Frågeloggdata
       items:
       - name: Dokumentation om frågespråk
-        href: ../log-analytics/query-language/query-language.md
+        href: log-query/query-language.md
       - name: Språkskillnader
-        href: ../log-analytics/query-language/data-explorer-difference.md?toc=/azure/azure-monitor/toc.json
+        href: log-query/data-explorer-difference.md
       - name: Kom igång
         items:
         - name: Kom igång med Analytics-portalen
-          href: ../log-analytics/query-language/get-started-analytics-portal.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/get-started-portal.md
         - name: Kom igång med frågor
-          href: ../log-analytics/query-language/get-started-queries.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/get-started-queries.md
         - name: Sökfrågor
-          href: ../log-analytics/query-language/search-queries.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/search-queries.md
         - name: Användbara operatorer
-          href: ../log-analytics/query-language/useful-operators.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/useful-operators.md
       - name: Lektioner
         items:
         - name: Strängåtgärder
-          href: ../log-analytics/query-language/string-operations.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/string-operations.md
         - name: Åtgärder för datum och tid
-          href: ../log-analytics/query-language/datetime-operations.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/datetime-operations.md
         - name: Aggregeringsfunktioner
-          href: ../log-analytics/query-language/aggregations.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/aggregations.md
         - name: Avancerade aggregeringar
-          href: ../log-analytics/query-language/advanced-aggregations.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/advanced-aggregations.md
         - name: Kopplingar
-          href: ../log-analytics/query-language/joins.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/joins.md
         - name: JSON och datastrukturer
-          href: ../log-analytics/query-language/json-data-structures.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/json-data-structures.md
         - name: Avancerad frågeskrivning
-          href: ../log-analytics/query-language/advanced-query-writing.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/advanced-query-writing.md
         - name: Grafer och diagram
-          href: ../log-analytics/query-language/charts.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/charts.md
         - name: Functions
-          href: ../log-analytics/query-language/functions.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/functions.md
       - name: Översiktsblad
         items:
         - name: SQL
-          href: ../log-analytics/query-language/sql-cheatsheet.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/sql-cheatsheet.md
         - name: Splunk
-          href: ../log-analytics/query-language/splunk-cheatsheet.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/splunk-cheatsheet.md
       - name: Frågespråk
         items:
         - name: Exempel
-          href: ../log-analytics/query-language/examples.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/examples.md
         - name: Sökningar mellan resurser
-          href: ../log-analytics/log-analytics-cross-workspace-search.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/cross-workspace-query.md
         - name: uttryck för app
-          href: ../log-analytics/query-language/app-expression.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/app-expression.md
         - name: uttryck för arbetsyta
-          href: ../log-analytics/query-language/workspace-expression.md?toc=/azure/azure-monitor/toc.json
+          href: log-query/workspace-expression.md
       - name: Loggdata
         items:
         - name: Programdata
@@ -717,11 +719,11 @@ items:
         - name: Standardegenskaper
           href: ../log-analytics/log-analytics-standard-properties.md?toc=/azure/azure-monitor/toc.json
       - name: Utför åtgärder från sökresultat
-        href: ../log-analytics/log-analytics-log-search-takeaction.md?toc=/azure/azure-monitor/toc.json
+        href: log-query/take-action.md
       - name: Datorgrupper
         href: platform/computer-groups.md
       - name: Flödesanslutning
-        href: ../log-analytics/log-analytics-flow-tutorial.md?toc=/azure/azure-monitor/toc.json
+        href: platform/flow-tutorial.md
       - name: Loggsöknings-API
         href: https://dev.loganalytics.io/
   - name: Svara på incidenter
@@ -821,11 +823,11 @@ items:
     - name: IT Service Management
       items:
       - name: IT Service Management Connector
-        href: ../log-analytics/log-analytics-itsmc-overview.md?toc=/azure/azure-monitor/toc.json
+        href: platform/itsmc-overview.md
       - name: IT Service Management-anslutningar
         href: platform/itsmc-connections.md
       - name: Skapa Service Manager-webbapp
-        href: ../log-analytics/log-analytics-itsmc-service-manager-script.md?toc=/azure/azure-monitor/toc.json
+        href: platform/itsmc-service-manager-script.md
   - name: Hantera användning och kostnad
     items:
     - name: Användning och uppskattade kostnader
@@ -1007,9 +1009,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: 46f8dfa668deed1be2b955fd42b894dfa5513a20
-ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
+ms.openlocfilehash: d87574fb4e430742a733d92992ef2009e0240d43
+ms.sourcegitcommit: 2bb46e5b3bcadc0a21f39072b981a3d357559191
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/04/2018
-ms.locfileid: "52846189"
+ms.lasthandoff: 12/05/2018
+ms.locfileid: "52889760"
