--- a/articles/service-fabric-mesh/TOC.yml
+++ b/articles/service-fabric-mesh/TOC.yml
@@ -10,7 +10,7 @@ items:
   items:
   - name: Distribuera Hello World
     href: service-fabric-mesh-quickstart-deploy-container.md
-  - name: Skapa och distribuera en webbapp till Azure Service Fabric Mesh
+  - name: Skapa en webbapp med Visual Studio
     href: service-fabric-mesh-quickstart-dotnet-core.md
 - name: Självstudier
   items:
@@ -42,26 +42,46 @@ items:
     href: service-fabric-mesh-terminology.md
   - name: Service Fabric-resurser
     href: service-fabric-mesh-service-fabric-resources.md
+  - name: Nätverk och gatewayer
+    href: service-fabric-mesh-networks-and-gateways.md
+  - name: Tjänstskalbarhet
+    href: service-fabric-mesh-scalability.md
   - name: Övervakning och diagnostik
     href: service-fabric-mesh-monitoring-diagnostics.md
   - name: Lagringstillstånd
     href: service-fabric-mesh-storing-state.md
+  - name: Hemligheter
+    href: service-fabric-mesh-secrets-overview.md
 - name: Instruktionsguider
   items:
   - name: Ställ in din utvecklingsmiljö
     href: service-fabric-mesh-howto-setup-developer-environment-sdk.md
   - name: Konfigurera Service Fabric Mesh CLI
     href: service-fabric-mesh-howto-setup-cli.md
+  - name: Använd en befintlig .NET-app i container
+    href: service-fabric-mesh-howto-containerize-vs.md
+  - name: Optimera Visual Studio-prestanda
+    href: service-fabric-mesh-howto-optimize-vs.md
+  - name: Konfigurera Gateway-resurser
+    href: service-fabric-mesh-howto-configure-gateways.md
+  - name: Skala tjänster automatiskt
+    href: service-fabric-mesh-howto-auto-scale-services.md
   - name: Lagringstillstånd med Azure Files-volym
     href: service-fabric-mesh-howto-deploy-app-azurefiles-volume.md
-  - name: Oberoende skalning av mikrotjänster i en app
-    href: service-fabric-mesh-howto-app-scale-out.md
+  - name: Lagra tillstånd med Service Fabric Reliable Disk-volymen
+    href: service-fabric-mesh-howto-deploy-app-sfreliable-disk-volume.md
+  - name: Hantera hemligheter
+    href: service-fabric-mesh-howto-manage-secrets.md
+  - name: Hitta exempel
+    href: service-fabric-mesh-howto-find-samples.md
 - name: Referens
   items:
   - name: REST API:er för Service Fabric Mesh-resursprovider
     href: /rest/api/servicefabric/sfmeshrp-index
   - name: REST API:er för Service Fabric-klientresurs
     href: /rest/api/servicefabric/sfclient-index#service-fabric-resource-model
+  - name: Referens för Service Fabric Maven CLI
+    href: service-fabric-mesh-reference-maven.md
 - name: Resurser
   items:
   - name: Vanliga frågor
@@ -78,9 +98,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=service-fabric-mesh
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: e29d383397b202578326d1db34265eddf5f7c40a
-ms.sourcegitcommit: 48592dd2827c6f6f05455c56e8f600882adb80dc
+ms.openlocfilehash: a510d3eeace6125e25faf4088cee16389001b3d9
+ms.sourcegitcommit: 2bb46e5b3bcadc0a21f39072b981a3d357559191
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/26/2018
-ms.locfileid: "50155124"
+ms.lasthandoff: 12/05/2018
+ms.locfileid: "52888451"
