--- a/articles/sql-data-warehouse/TOC.yml
+++ b/articles/sql-data-warehouse/TOC.yml
@@ -271,6 +271,8 @@ items:
       href: sql-data-warehouse-reference-tsql-statements.md
   - name: Systemvyer
     href: sql-data-warehouse-reference-tsql-system-views.md
+  - name: Gen2, lägre beräkningsnivån
+    href: gen2-lower-tier-regions.md
   - name: PowerShell-cmdletar
     href: sql-data-warehouse-reference-powershell-cmdlets.md
   - name: REST API:er
@@ -303,9 +305,9 @@ items:
       href: sql-data-warehouse-partner-data-integration.md
     - name: Datahantering
       href: sql-data-warehouse-partner-data-management.md
-ms.openlocfilehash: ec30b0d6cdfeea74350bfdfdc6503992adf20285
-ms.sourcegitcommit: 0fc99ab4fbc6922064fc27d64161be6072896b21
+ms.openlocfilehash: 6fdb8869a50000591a52d70989ef44918304ad9e
+ms.sourcegitcommit: b0f39746412c93a48317f985a8365743e5fe1596
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "51578186"
+ms.lasthandoff: 12/04/2018
+ms.locfileid: "52878571"
