--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -89,56 +89,62 @@ items:
   items:
   - name: Inköpsmodeller
     items:
-    - name: vCore jämfört med DTU
+    - name: Översikt
       href: sql-database-service-tiers.md
-    - name: Virtuell kärna-baserad inköpsmodell
-      items:
-      - name: Välja tjänstnivå för virtuell kärna
-        href: sql-database-service-tiers-vcore.md
-      - name: Generell användning/affärskritisk
-        href: sql-database-service-tiers-general-purpose-business-critical.md
-      - name: Hyperskala
-        href: sql-database-service-tier-hyperscale.md
-      - name: Vanliga frågor och svar om hyperskala
-        href: sql-database-service-tier-hyperscale-faq.md
-    - name: Tjänstnivåer för DTU
+    - name: vCore-baserad modell
+      href: sql-database-service-tiers-vcore.md
+    - name: DTU-modell
       href: sql-database-service-tiers-dtu.md
     - name: Förskottsbetalning för reserverad kapacitet
       href: sql-database-reserved-capacity.md
-  - name: Logiska servrar
+  - name: Beräkning och lagring
     items:
-    - name: Skapa och hantera
-      href: sql-database-logical-servers.md
-    - name: Resursbegränsningar
-      href: sql-database-resource-limits-logical-server.md
-    - name: Anslutningsarkitektur
-      href: sql-database-connectivity-architecture.md
-    - name: T-SQL-skillnader
-      href: sql-database-transact-sql-information.md
-    - name: Transaktionsreplikering – enkla databaser och elastiska pooler
-      href: replication-to-sql-database.md
+    - name: Översikt
+      href: sql-database-service-tiers-general-purpose-business-critical.md
+    - name: Generell användning/Standard
+      href: sql-database-service-tier-general-purpose.md
+    - name: Affärskritisk/Premium
+      href: sql-database-service-tier-business-critical.md
+    - name: Hyperskala
+      href: sql-database-service-tier-hyperscale.md
+    - name: Vanliga frågor och svar om hyperskala
+      href: sql-database-service-tier-hyperscale-faq.md
   - name: Enkla databaser
     items:
+    - name: Enskild databas
+      href: sql-database-single-index.yml
     - name: Skapa och hantera
       href: sql-database-single-databases-manage.md
+    - name: Logiska servrar
+      items:
+      - name: Skapa och hantera
+        href: sql-database-logical-servers.md
+      - name: Resursbegränsningar
+        href: sql-database-resource-limits-logical-server.md
+      - name: Anslutningsarkitektur
+        href: sql-database-connectivity-architecture.md
+      - name: T-SQL-skillnader
+        href: sql-database-transact-sql-information.md
+      - name: Transaktionsreplikering – enkla databaser och elastiska pooler
+        href: replication-to-sql-database.md
+    - name: Elastiska pooler
+      items:
+      - name: Elastiska pooler
+        href: sql-database-elastic-pool.md
+      - name: Skapa och hantera
+        href: sql-database-elastic-pool-manage.md
+      - name: vCore-baserade resursbegränsningar
+        href: sql-database-vcore-resource-limits-elastic-pools.md
+      - name: DTU-baserade resursbegränsningar
+        href: sql-database-dtu-resource-limits-elastic-pools.md
+      - name: Skala resurser
+        href: sql-database-elastic-pool-scale.md
     - name: vCore-baserade resursbegränsningar
       href: sql-database-vcore-resource-limits-single-databases.md
     - name: DTU-baserade resursbegränsningar
       href: sql-database-dtu-resource-limits-single-databases.md
     - name: Skala resurser
       href: sql-database-single-database-scale.md
-  - name: Elastiska pooler
-    items:
-    - name: Elastiska pooler
-      href: sql-database-elastic-pool.md
-    - name: Skapa och hantera
-      href: sql-database-elastic-pool-manage.md
-    - name: vCore-baserade resursbegränsningar
-      href: sql-database-vcore-resource-limits-elastic-pools.md
-    - name: DTU-baserade resursbegränsningar
-      href: sql-database-dtu-resource-limits-elastic-pools.md
-    - name: Skala resurser
-      href: sql-database-elastic-pool-scale.md
   - name: Hanterade instanser
     items:
     - name: Hanterade instanser
@@ -159,7 +165,7 @@ items:
         href: sql-database-managed-instance-sync-network-configuration.md
       - name: Anslutningsarkitektur
         href: sql-database-managed-instance-connectivity-architecture.md
-      - name: Hanteringsslutpunkter
+      - name: Hanteringsslutpunkt
         href: sql-database-managed-instance-management-endpoint.md
       - name: Anslut program
         href: sql-database-managed-instance-connect-app.md
@@ -656,9 +662,9 @@ items:
     href: /azure/architecture/
   - name: Kundberättelser
     href: http://customers.microsoft.com/en-us/search?sq=%22Azure%20SQL%20Database%22&ff=&p=0&so=story_publish_date%20desc
-ms.openlocfilehash: 2cc5240aa7302d687f0b7a2fad2af29105e86de0
-ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
+ms.openlocfilehash: ea998e50af9b6b2f4f6331a0f02f84d08eff425c
+ms.sourcegitcommit: 2bb46e5b3bcadc0a21f39072b981a3d357559191
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/04/2018
-ms.locfileid: "52840426"
+ms.lasthandoff: 12/05/2018
+ms.locfileid: "52890168"
