--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -5,7 +5,7 @@ items:
   href: index.yml
 - name: Översikt
   items:
-  - name: Om Time Series Insights (förhandsversion)
+  - name: Om Time Series Insights
     href: time-series-insights-update-overview.md
 - name: Snabbstarter
   items:
@@ -29,7 +29,7 @@ items:
       href: tutorial-create-populate-tsi-environment.md
   - name: Azure Time Series Insights (förhandsversion)
     items:
-    - name: Skapa en TSI-miljö
+    - name: Azure TSI (förhandsversion) – självstudie
       href: time-series-insights-update-create-environment.md
 - name: Begrepp
   items:
@@ -51,9 +51,9 @@ items:
       href: time-series-insights-update-storage-ingress.md
     - name: Användningsfall
       href: time-series-insights-update-use-cases.md
-    - name: Time Series-modell
+    - name: Datamodellering
       href: time-series-insights-update-tsm.md
-    - name: Time Series-fråga
+    - name: Fråga data
       href: time-series-insights-update-tsq.md
     - name: Visualisera data i uppdateringen för Explorer
       href: time-series-insights-update-explorer.md
@@ -109,25 +109,29 @@ items:
   items:
   - name: Time Series Insights
     items:
-    - name: Time Series Insights (Allmänt tillgängligt)
+    - name: Azure Time Series Insights (Allmänt tillgänglig)
+      href: /rest/api/time-series-insights/ga
       items:
       - name: Söka i data
+        href: /rest/api/time-series-insights/ga-query
         items:
         - name: API
-          href: /rest/api/time-series-insights/time-series-insights-reference-queryapi
+          href: /rest/api/time-series-insights/ga-query-api
         - name: Syntax
-          href: /rest/api/time-series-insights/time-series-insights-reference-query-syntax
+          href: /rest/api/time-series-insights/ga-query-syntax
       - name: API för referensdata
+        href: /rest/api/time-series-insights/ga-reference-data-api
     - name: Azure Time Series Insights (förhandsversion)
+      href: /rest/api/time-series-insights/preview
       items:
       - name: Time Series-fråga
-        href: /rest/api/time-series-insights/time-series-insights-reference-update-tsq
+        href: /rest/api/time-series-insights/preview-query
       - name: Time Series-modell
-        href: /rest/api/time-series-insights/time-series-insights-reference-update-tsm
+        href: /rest/api/time-series-insights/preview-model
       - name: API för Time Series-miljö
-        href: /rest/api/time-series-insights/time-series-insights-reference-update-env
+        href: /rest/api/time-series-insights/preview-env
       - name: Time Series-uttryck och -syntax
-        href: /rest/api/time-series-insights/time-series-insights-reference-update-tsx
+        href: /rest/api/time-series-insights/preview-tsx
 - name: Relaterat
   items:
   - name: Lösningar
@@ -176,9 +180,9 @@ items:
     href: https://azure.microsoft.com/support/options/
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=time-series-insights
-ms.openlocfilehash: d30b4b2b19a4f055647b4723c91a15a1a977de6d
-ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
+ms.openlocfilehash: c75c034e0f54b33e28aa7f0ef5d0c18ad0004e55
+ms.sourcegitcommit: 2bb46e5b3bcadc0a21f39072b981a3d357559191
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/04/2018
-ms.locfileid: "52849521"
+ms.lasthandoff: 12/05/2018
+ms.locfileid: "52889999"
