commit translated contents

--- a/articles/machine-learning/service/index.yml
+++ b/articles/machine-learning/service/index.yml
@@ -1,15 +1,15 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 1add464c85d30622bf0940bf20a483ae22d07ea6
-ms.sourcegitcommit: b0f39746412c93a48317f985a8365743e5fe1596
+ms.openlocfilehash: 03e626eeac70ad3b77da80b599e92949d2194b4e
+ms.sourcegitcommit: 698ba3e88adc357b8bd6178a7b2b1121cb8da797
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/04/2018
-ms.locfileid: "52865326"
+ms.lasthandoff: 12/07/2018
+ms.locfileid: "53013858"
 documentType: LandingData
 title: Dokumentation om Azure Machine Learning-tjänsten
 metadata:
-  title: Dokumentation om Azure Machine Learning – Självstudier, API-referens | Microsoft Docs
-  meta.description: Learn how to build intelligent algorithms into apps and websites. Use Scikit-learn, Tensorflow, Pytorch or any other Python-based framework to build your machine learning model and train it locally or in the cloud. Tutorials, quickstarts, API references, and examples show you how.
+  title: Dokumentation om Azure Machine Learning-tjänsten – självstudier, API-referens| Microsoft Docs
+  description: Lär dig hur du integrerar intelligenta algoritmer i appar och webbplatser. Använd Scikit-learn, Tensorflow, Pytorch eller något annat Python-baserat ramverk för att skapa en maskininlärningsmodell och träna den lokalt eller i molnet. Självstudier, snabbstarter, API-referenser och exempel med anvisningar.
   services: machine-learning
   author: j-martens
   manager: jhubbard
@@ -20,6 +20,7 @@ metadata:
   ms.topic: landing-page
   ms.date: 09/24/2018
   ms.author: jmartens
+  ms.custom: seodec18
 abstract:
   description: Lär dig hur du integrerar intelligenta algoritmer i appar och webbplatser. Använd Scikit-learn, Tensorflow, Pytorch eller något annat Python-baserat ramverk för att skapa en maskininlärningsmodell och träna den lokalt eller i molnet. Självstudier, snabbstarter, API-referenser och exempel med anvisningar.
 sections:
