--- a/articles/active-directory/conditional-access/TOC.yml
+++ b/articles/active-directory/conditional-access/TOC.yml
@@ -34,16 +34,18 @@ items:
   items:
   - name: Bästa praxis
     href: best-practices.md
-  - name: Kräva MFA för åtkomstförsök från ej betrodda nätverk
-    href: untrusted-networks.md
-  - name: Kräv hanterade enheter
-    href: require-managed-devices.md
-  - name: Kräva godkända klientappar
-    href: app-based-conditional-access.md
+  - name: Blockera äldre autentisering
+    href: block-legacy-authentication.md
   - name: Styr åtkomsten till Exchange Online och SharePoint Online
     href: conditional-access-for-exo-and-spo.md
   - name: Migrera klassiska principer
     href: policy-migration.md
+  - name: Kräva godkända klientappar
+    href: app-based-conditional-access.md
+  - name: Kräv hanterade enheter
+    href: require-managed-devices.md
+  - name: Kräva MFA för åtkomstförsök från ej betrodda nätverk
+    href: untrusted-networks.md
   expanded: true
 - name: Referens
   items:
@@ -63,9 +65,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-active-directory
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory
-ms.openlocfilehash: c5bf350b2959571cc2d96eeacf8c4774dbb6b421
-ms.sourcegitcommit: c61c98a7a79d7bb9d301c654d0f01ac6f9bb9ce5
+ms.openlocfilehash: cbba6bd7e49f4866a83e8b37945a5066c33d0b35
+ms.sourcegitcommit: 698ba3e88adc357b8bd6178a7b2b1121cb8da797
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/27/2018
-ms.locfileid: "52427241"
+ms.lasthandoff: 12/07/2018
+ms.locfileid: "53015202"
