--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -122,8 +122,8 @@ items:
       href: create-function-app-linux-app-service-plan.md
     - name: Hantera anslutningar
       href: manage-connections.md
-    - name: Felhantering
-      href: functions-bindings-error-pages.md
+    - name: Köra en funktion som inte utlösts av HTTP manuellt
+      href: functions-manually-run-non-http.md
     - name: Felsöka Event Grid-utlösare lokalt
       href: functions-debug-event-grid-trigger-local.md
   - name: Distribuera
@@ -279,9 +279,9 @@ items:
     href: https://github.com/Azure/Azure-Functions/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=functions&updatetype=&platform=
-ms.openlocfilehash: 8f34a506dd79b95f1feaf562d9c92a7f12bdeaed
-ms.sourcegitcommit: 2469b30e00cbb25efd98e696b7dbf51253767a05
+ms.openlocfilehash: d2980d4de39ecba5b94a58bfa7a17729c6410155
+ms.sourcegitcommit: 85d94b423518ee7ec7f071f4f256f84c64039a9d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/06/2018
-ms.locfileid: "52995009"
+ms.lasthandoff: 12/14/2018
+ms.locfileid: "53385609"
