--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -230,7 +230,7 @@ items:
       items:
       - name: Använda Azure-portalen
         href: iot-hub-create-through-portal.md
-      - name: Använda Azure IoT-verktyg för VS Code
+      - name: Använda Azure IoT Hub Toolkit för VS Code
         href: iot-hub-create-use-iot-toolkit.md
       - name: Använda Azure PowerShell
         href: iot-hub-create-using-powershell.md
@@ -300,7 +300,7 @@ items:
         href: iot-hub-arduino-iot-devkit-az3166-door-monitor.md
     - name: Utökade IoT-scenarier
       items:
-      - name: Hantera meddelanden mellan enheter och molnet med Azure IoT Toolkit för VS Code
+      - name: Hantera meddelanden mellan enheter och molnet med Azure IoT Hub Toolkit för VS Code
         href: iot-hub-vscode-iot-toolkit-cloud-device-messaging.md
       - name: Datavisualisering i Power BI
         href: iot-hub-live-data-visualization-in-power-bi.md
@@ -308,7 +308,7 @@ items:
         href: iot-hub-live-data-visualization-in-web-apps.md
       - name: Väderprognoser med hjälp av Azure Machine Learning
         href: iot-hub-weather-forecast-machine-learning.md
-      - name: Enhetshantering med Azure IoT Toolkit för VS Code
+      - name: Enhetshantering med Azure IoT Hub Toolkit för VS Code
         href: iot-hub-device-management-iot-toolkit.md
       - name: Enhetshantering med IoT-tillägg för Azure CLI
         href: iot-hub-device-management-iot-extension-azure-cli-2-0.md
@@ -392,7 +392,7 @@ items:
     href: iot-hub-customer-data-requests.md
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/?category=iot
-  - name: Azure IoT Toolkit
+  - name: Azure IoT Hub Toolkit
     href: https://marketplace.visualstudio.com/items?itemName=vsciot-vscode.azure-iot-toolkit
   - name: DeviceExplorer-verktyg
     href: https://github.com/Azure/azure-iot-sdk-csharp/tree/master/tools/DeviceExplorer
@@ -412,9 +412,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=iot-hub
-ms.openlocfilehash: 5022e1e8f4e8b8c0464be9391ccf2189079e2819
-ms.sourcegitcommit: c61c98a7a79d7bb9d301c654d0f01ac6f9bb9ce5
+ms.openlocfilehash: 651ac892bdfd81d0d106d831caeec4f2f43e1649
+ms.sourcegitcommit: edacc2024b78d9c7450aaf7c50095807acf25fb6
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/27/2018
-ms.locfileid: "52422821"
+ms.lasthandoff: 12/13/2018
+ms.locfileid: "53337724"
