--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -40,9 +40,7 @@ items:
     href: security-center-wdatp.md
   - name: Skydda App Service
     href: security-center-app-services.md
-  - name: Visa säkerhetsprinciper
-    href: security-center-azure-policy.md
-  - name: Redigera säkerhetsprinciper
+  - name: Arbeta med säkerhetsprinciper
     href: tutorial-security-policy.md
   - name: Anpassa informationsskyddsprincipen
     href: security-center-info-protection-policy.md
@@ -219,9 +217,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=security-center
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: dfcf985e2f7dec286f6b64d508e8525986315a6c
-ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
+ms.openlocfilehash: 28b701fcb85bd8deac5c0442d98730dfb10e8cd2
+ms.sourcegitcommit: edacc2024b78d9c7450aaf7c50095807acf25fb6
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/04/2018
-ms.locfileid: "52843367"
+ms.lasthandoff: 12/13/2018
+ms.locfileid: "53338693"
